--- a/rapport.tex
+++ b/rapport.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, a4paper]{report}
+\documentclass[11pt]{report}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -35,6 +35,7 @@
 \tcbuselibrary{skins,breakable}
 \usepackage[backend=biber, style=numeric, sorting=none]{biblatex} % Use BibLaTeX
 \addbibresource{references.bib} % Specify the BibTeX file
+\usepackage{shapepar}
 
 \renewcommand*{\bibleftbracket}{<}
 \renewcommand*{\bibrightbracket}{>}
